// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c1 {
  min-width: 40px;
  width: 40px;
  height: 40px;
  padding: 8px;
  background-color: #0068ef;
  color: #fff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url();
}

<div
  className="c0"
>
  <div
    alt="avatar"
    className="c1 c2"
    color="primary"
    role="img"
    size={40}
  >
    <svg
      aria-hidden={true}
      className="c3 c4"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0 2c-2.7 0-8 1.3-8 4v2h16v-2c0-2.7-5.3-4-8-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar renders initials 1`] = `
.c1 {
  min-width: 40px;
  width: 40px;
  height: 40px;
  padding: 8px;
  background-color: #0068ef;
  color: #fff;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-size: 14px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url();
}

<div
  className="c0"
>
  <div
    alt="avatar"
    className="c1 c2"
    color="primary"
    role="img"
    size={40}
  >
    <div
      className="c3"
      fontSize={1}
    >
      WS
    </div>
  </div>
</div>
`;

exports[`Avatar renders mr elon 1`] = `
<DocumentFragment>
  .c2 {
  min-width: 40px;
  width: 40px;
  height: 40px;
  padding: 8px;
  background-color: #0068ef;
  color: #fff;
}

.c4 {
  margin-left: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  margin: 0px;
}

.c7 {
  color: #4f6f8f;
  font-size: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url(https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg);
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        alt="papa-elon"
        class="c2 c3"
        color="primary"
        role="img"
        size="40"
        src="https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg"
      />
      <div
        class="c4 c5"
      >
        <h5
          class="c6"
        >
          Not Elon Musk
        </h5>
        <div
          class="c7"
          color="text.light"
          font-size="0"
        >
          totally.not.elon@musk.com
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
